Last modification contrast fix

--- a/styles/base.css
+++ b/styles/base.css
@@ -60,7 +60,7 @@ nav a, footer  {
 }
 
 .last-modification {
-    color: yellow;
+    color: white;
 }
 
 nav a:hover {
